[package]
name = "zero_to_production"
version = "0.1.0"
edition = "2021"
authors = ["Ebenezer Frimpong <ebenezerfrimpong17@gmail.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_production"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = {version = "*", features = ["derive"]}

[dev-dependencies]
reqwest = "0.12.9"

